update : config vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
   "build": {
     "env": {
       "VITE_API_URL": "https://mileapp-api.up.railway.app",
       "VITE_APP_ENV": "production"
     }
   },
-  "builds": [
-    { "src": "dist/spa/**", "use": "@vercel/static" }
-  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/dist/spa/$1" }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
