--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "format": "prettier --write \"**/*.{js,vue,css,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build -m spa",
-    "start": "quasar dev",
+    "build": "quasar build",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
